[package]
name = "hfendpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmpv = { version = "1.3", features = ["with-serde"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
rmp-serde = "1.3"
async-stream = "0.3"
serde_json = "1.0"
thiserror = "2.0"
serde_bytes = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
nix = { version = "0.29", features = ["fs"] }
base64 = "0.22"
dashmap = "6.1"
axum_typed_multipart = "0.15"
bytes = { version = "1", features = ["serde"] }

[profile.release-opt]
inherits = "release"
panic = "abort"
strip = "symbols"
lto = "fat"
codegen-units = 1
