[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfendpoint"
version = "0.1.0"
description = "hfendpoint binding"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "angt", email = "angt@hf.co" },
]
py_modules = ["hfendpoint"]
dependencies = [
    "msgpack",
]
